封装用户认证信息